# deep-space-mission-design-toolkit

./: .gitignore  CITATION.cff  README.md  mission_design_conventions.md  pyproject.toml
.github/workflows/: docs.yml
docs/: conf.py  examples.rst  index.rst  introduction.rst  modules.rst
examples/: README.md  cislunar_demo.py  direct_optimization_demo.py  earth_escape_demo.py  event_detection_demo.py  flyby_correction_demo.py  flyby_demo.py  free_return_demo.py  free_return_figure8.py  gravity_assist_optimized_demo.py  homotopy_continuation_demo.py  homotopy_demo.py  indirect_optimization_demo.py  lambert_seed_nbody.py  mars_transfer_hohmann_demo.py  nbody_demo.py  optimization_comparison.py  poincare_map_demo.py  porkchop_demo.py  porkchop_earth_mars.py  porkchop_plot_demo.py  results.md  tisserand_demo.py
src/dynamics/: nbody.py  perturbations.py
src/mission/: __init__.py  departure.py  porkchop.py  tisserand.py
src/optimization/: direct.py  grid_search.py  homotopy.py  hybrid.py  indirect.py  initial_guess.py  multiple_shooting.py  ocp.py  single_shooting.py
src/spice/: manager.py
src/trajectory/: flyby.py  lambert.py  maneuver.py
tests/: test_benchmarks.py  test_direct_double_integrator.py  test_flyby.py  test_flyby_correction.py  test_indirect.py  test_initial_guess.py  test_lambert.py  test_maneuver.py  test_mission.py  test_nbody.py  test_nbody_stm.py  test_orbital_mechanics.py  test_perturbations.py  test_propagation_accuracy.py  test_shooting.py  test_tisserand.py
